test/corpus/blocks.txt
========================================
Single-expression block
========================================

module Blocks {
  action example = {
    true
  }
}

---

(source_file
  (module_definition
    name: (identifier)
    (operator_definition
      name: (identifier)
      body: (block_expression
        expression: (boolean_literal)))))

========================================
Primed state assignment
========================================

module State {
  var balance: int

  action increment = {
    balance' = balance + 1
  }
}

---

(source_file
  (module_definition
    name: (identifier)
    (variable_declaration
      name: (identifier)
      type: (primitive_type))
    (operator_definition
      name: (identifier)
      body: (block_expression
        expression: (assignment_expression
          target: (primed_identifier
            name: (identifier))
          value: (binary_expression
            left: (name_reference
              name: (identifier))
            right: (integer_literal)))))))

========================================
Braced Boolean conjunction
========================================

module BooleanBlocks {
  pure val conjunction = and {
    true,
    false,
  }
}

---

(source_file
  (module_definition
    name: (identifier)
    (value_definition
      name: (identifier)
      body: (and_block_expression
        conjunct: (boolean_literal)
        conjunct: (boolean_literal)))))

========================================
Braced Boolean disjunction
========================================

module BooleanBlocks {
  pure val disjunction = or {
    false,
    true,
  }
}

---

(source_file
  (module_definition
    name: (identifier)
    (value_definition
      name: (identifier)
      body: (or_block_expression
        disjunct: (boolean_literal)
        disjunct: (boolean_literal)))))

========================================
Local nondeterministic binding
========================================

module Choices {
  action choose = {
    nondet value = Set(1, 2).oneOf()
    value > 0
  }
}

---

(source_file
  (module_definition
    name: (identifier)
    (operator_definition
      name: (identifier)
      body: (block_expression
        binding: (nondet_binding
          name: (identifier)
          value: (ufcs_call_expression
            receiver: (call_expression
              function: (name_reference
                name: (identifier))
              argument: (integer_literal)
              argument: (integer_literal))
            method: (identifier)))
        expression: (binary_expression
          left: (name_reference
            name: (identifier))
          right: (integer_literal))))))

========================================
Qualified nondeterministic binding
========================================

module Choices {
  action pick = {
    nondet Scope::x = Set(1).oneOf()
    Scope::x == 1
  }
}

---

(source_file
  (module_definition
    name: (identifier)
    (operator_definition
      name: (identifier)
      body: (block_expression
        binding: (nondet_binding
          name: (qualified_identifier
            namespace: (identifier)
            name: (identifier))
          value: (ufcs_call_expression
            receiver: (call_expression
              function: (name_reference
                name: (identifier))
              argument: (integer_literal))
            method: (identifier)))
        expression: (binary_expression
          left: (namespace_access_expression
            namespace: (identifier)
            member: (identifier))
          right: (integer_literal))))))

========================================
Nondeterministic choice with trailing comma
========================================

module Choices {
  action firstChoice = true
  action secondChoice = true

  action choose = {
    any {
      firstChoice(),
      secondChoice(),
    }
  }
}

---

(source_file
  (module_definition
    name: (identifier)
    (operator_definition
      name: (identifier)
      body: (boolean_literal))
    (operator_definition
      name: (identifier)
      body: (boolean_literal))
    (operator_definition
      name: (identifier)
      body: (block_expression
        expression: (any_expression
          choice: (call_expression
            function: (name_reference
              name: (identifier)))
          choice: (call_expression
            function: (name_reference
              name: (identifier))))))))

========================================
Conjunctive action with trailing comma
========================================

module Conjunctions {
  var n: int

  action Even = all {
    n % 2 == 0,
    n' = n / 2,
  }
}

---

(source_file
  (module_definition
    name: (identifier)
    (variable_declaration
      name: (identifier)
      type: (primitive_type))
    (operator_definition
      name: (identifier)
      body: (all_expression
        conjunct: (binary_expression
          left: (binary_expression
            left: (name_reference
              name: (identifier))
            right: (integer_literal))
          right: (integer_literal))
        conjunct: (assignment_expression
          target: (primed_identifier
            name: (identifier))
          value: (binary_expression
            left: (name_reference
              name: (identifier))
            right: (integer_literal)))))))
