test/corpus/comments.txt
========================================
Line and documentation comments
========================================

module Comments {
  /// State documentation
  var state: int

  // Initial value
  val initial = 0
}

---

(source_file
  (module_definition
    name: (identifier)
    (documentation_comment)
    (variable_declaration
      name: (identifier)
      type: (primitive_type))
    (comment)
    (value_definition
      name: (identifier)
      body: (integer_literal))))

========================================
Block comments
========================================

/* module documentation */
module BlockComment {
  /* declaration documentation */
  val answer = 42
}

---

(source_file
  (comment)
  (module_definition
    name: (identifier)
    (comment)
    (value_definition
      name: (identifier)
      body: (integer_literal))))

========================================
Documentation comment nodes
========================================

/// Module documentation
module Documented {
  /// Value documentation
  val answer = 42
}

---

(source_file
  (documentation_comment)
  (module_definition
    name: (identifier)
    (documentation_comment)
    (value_definition
      name: (identifier)
      body: (integer_literal))))
